chronienie ścierzek projektów/zadań
